get tickets by event working and tested
